--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
     border-radius: 50%;
     background: url('img/img02.jpg') center / cover;
 }
+
 a {
     text-decoration: none;
 }
@@ -49,6 +50,7 @@ ul {
 .header_menu {
     font-size: 24px;
     font-weight: bold;
+    color: white;
 }
 
 .info {
@@ -99,9 +101,12 @@ ul {
 
 .about_button {
     color: white;
-    background-color: green;
+    background-color: #3882f6;
     padding: 10px 30px;
     border-radius: 10px;
+}
+
+a {
     text-decoration: none;
 }
 
@@ -124,4 +129,93 @@ ul {
 .information_row {
     display: flex;
     justify-content: space-between;
+}
+
+.information_column {
+    text-align: center;
+}
+
+.information_image {
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    background: url('img/img05.jpg') center / cover;
+    border-radius: 10%;
+    border: 5px solid #000;
+    margin: 0px 0px 10px 0px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.information_text {
+    font-size: 16px;
+    font-weight: bold;
+    max-width: 200px;
+}
+
+.section_three {
+    background-color: #e5e7eb;
+    padding: 80px 0 70px;
+
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.review_text {
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+}
+
+.review_author {
+    text-align: right;
+    font-size: 18px;
+    font-weight: 900;
+    margin: 20px 0px 0px 0px;
+}
+
+.section_four {
+    padding: 100px;
+}
+
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.sign-up_context {
+    background-color: #3882f6;
+    padding: 60px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.sign-up_text {
+    color: #fff;
+    font-size: 18px;
+}
+
+.sign-up_btn {
+    color: #fff;
+    font-size: 22px;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 10px 40px;
+}
+
+.footer {
+    padding: 40px;
+    background-color: #131c2c;
+    text-align: center;
+}
+
+.footer_text {
+    color: white;
 }
