--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ body {
     background: url('img/img03.jpg') center / cover fixed;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 .header {
-    padding: 100px;
+    padding: 20px;
 }
 
 .container {
@@ -39,6 +40,11 @@ a {
     display: flex;
     align-items: center;
     gap: 25px;
+}
+
+.header_link {
+    font-size: 24px;
+    font-weight: bold;
 }
 
 ul {
@@ -200,6 +206,12 @@ a {
 .sign-up_text {
     color: #fff;
     font-size: 18px;
+}
+
+.sign-up_title {
+    font-weight: bold;
+    font-size: 28px;
+    margin: 0px 0px 5px 0px;
 }
 
 .sign-up_btn {
