--- a/style.css
+++ b/style.css
@@ -80,10 +80,14 @@ ul {
 }
 
 .about_image {
-    background: url('img/img04.jpg') center / cover;
+    /* background: url('img/img04.jpg') center / cover; */
     width: 500px;
     height: 300px;
     flex: 0 1 auto;
+}
+.about_image > img{
+    width: 100%;
+    height: 100%;
 }
 
 .about_content {
